Fix footer alignment
Better cross browser support if we do alignment this way

--- a/app/styles/components/ilios-footer.scss
+++ b/app/styles/components/ilios-footer.scss
@@ -2,7 +2,7 @@
   background-color: $ilios-orange;
   display: flex;
   height: 20px;
-  justify-content: end;
+  justify-content: flex-end;
   width: 100%;
 
   .version {
